test/subjects/errors/invalid_interface_member.php
<?php

	interface Foo 
	{
		var $bold; # {phc-error: Interfaces may not include member variables } 
	}

?>
